--- a/Style/about_us.css
+++ b/Style/about_us.css
@@ -28,7 +28,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(135deg, #E3F2FD, #FFE0B2, #BBDEFB, #FFE0B2);
+    background: linear-gradient(135deg, rgb(242, 242, 242, 0.8) 0%, rgba(113, 154, 252, 0.8) 50%, rgb(242, 242, 242, 0.8) 100%);
     background-size: 400% 400%;
     animation: gradient-shift 15s ease infinite;
     z-index: -1;
